finished music system, now just adding genre content.